--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-icons": "^5.5.0",
+    "rough-notation": "^0.5.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
