--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.23.25",
     "gsap": "^3.14.1",
     "lucide-react": "^0.556.0",
+    "motion": "^12.23.26",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
